chore: remove target from commited files and add coverage reports